--- a/share/memo.html
+++ b/share/memo.html
@@ -30,16 +30,23 @@ main p {
   margin-bottom: 0;
 }
 .card {
-  /*border: 2px solid rgb(223,223,223);*/
+  /* border: 2px solid rgb(223,223,223); */
   border-width: 2px;
+  user-select: none;
 }
 .card-text {
   font-size: 1.2rem;  /* firefox: p=1rem */
+  max-height: 50vh;
+  overflow-y: auto;
 }
 .card-body > small {
   font-size: 0.96rem;  /* firefox: small~0.8rem */
   display: block;
   margin-bottom: 5px;
+}
+.card-body > textarea {
+  max-height: 50vh;
+  overflow-y: auto;
 }
 .checked-memo {
   text-decoration: line-through;
@@ -57,6 +64,11 @@ main p {
 }
 #memos .card-body:hover button, #memos .card-body:hover br {
   display: revert;
+}
+@media (any-pointer: coarse) {
+  #memos .card-body button, #memos .card-body br {
+    display: revert;
+  }
 }
 
 #folder-btn-text, #col-btn-text {
@@ -170,12 +182,9 @@ main p {
 
   </main>
 
-  <!-- Why put before end of body: https://stackoverflow.com/questions/10994335 -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script> -->
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
@@ -183,7 +192,8 @@ main p {
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+    crossorigin="anonymous"></script>
 
   <script>
 
@@ -198,10 +208,7 @@ let current_folder, current_folder_data;
 
 // run when document ready
 $(function() {
-  // $("#memos").sortable({placeholder: "ui-state-highlight",helper:'clone'});
   $("#memos").sortable({stop: save_current_folder});
-  // $("#memos").disableSelection();
-  // ^ not sure what this does, maybe for mobile devices? tested, not working...
   $("#export-memo-btn").on("click", export_memo_btn);
   $("#import-file-selector").on("change", import_file_selected);
   $("#export-copy-memo-btn").on("click", export_copy_memo_btn);
@@ -212,9 +219,11 @@ $(function() {
   $("#col-btn").on("click", col_btn);
   $("#folder-btn").on("click", folder_btn);
   $("#add-folder-btn").on("click", add_folder_btn);
-  $("#add-folder-input").on("keydown", alt_enter_listener(add_folder_btn, false));
+  $("#add-folder-input").on("keydown", key_listener(add_folder_btn));
   $("#add-memo-btn").on("click", add_memo_btn);
-  $("#add-memo-txt").on("keydown", alt_enter_listener(add_memo_btn));
+  $("#add-memo-txt").on("keydown", key_listener(add_memo_btn, "Enter", true));
+  $("#add-memo-txt").on("input", resize_textarea);
+  resize_textarea(null, $("#add-memo-txt"));
   $(window).resize(resize_col);
   resize_col();
   load_from_storage();
@@ -240,7 +249,9 @@ function add_memo(txt, time_str, checked=false) {
           <button class="close cancel-edit-memo float-left d-none mr-2">
             <i class="material-icons">undo</i> </button>
           <button class="close edit-memo float-left mr-2"><i class="material-icons">mode_edit</i></button>
-          <button class="close copy-memo float-left"><i class="material-icons">content_copy</i></button>
+          <button class="close copy-memo float-left mr-2"><i class="material-icons">content_copy</i></button>
+          <button class="close up-memo float-left mr-2"><i class="material-icons">arrow_upward</i></button>
+          <button class="close down-memo float-left mr-2"><i class="material-icons">arrow_downward</i></button>
           <br><br>
           <small></small>
           <p class="card-text"></p>
@@ -258,8 +269,13 @@ function add_memo(txt, time_str, checked=false) {
   new_memo_div.find(".copy-memo").on("click", copy_memo);
   new_memo_div.find(".cancel-edit-memo").on("click", toggle_edit_memo);
   new_memo_div.find(".edit-memo").on("click", edit_memo);
-  new_memo_div.find("textarea").on("keydown", alt_enter_listener(function() {
-    new_memo_div.find(".edit-memo").click(); }));
+  new_memo_div.find(".up-memo").on("click", up_memo);
+  new_memo_div.find(".down-memo").on("click", down_memo);
+  new_memo_div.find("textarea").on("keydown", key_listener(function() {
+    new_memo_div.find(".edit-memo").click(); }, "Enter", true));
+  new_memo_div.find("textarea").on("keydown", key_listener(function() {
+    new_memo_div.find(".cancel-edit-memo").click(); }, "Escape"));
+  new_memo_div.find("textarea").on("input", resize_textarea);
   new_memo_div.insertAfter($("#add-memo-div"));
 }
 
@@ -334,54 +350,47 @@ function data_to_ui(data, folder=null) {
 }
 
 // input, textarea keydown helper
-function alt_enter_listener(func, alt_required=true) {
+function key_listener(func, key="Enter", alt=false) {
   return function(event) {
     // https://stackoverflow.com/questions/30467263
     if (event.defaultPrevented) {
       return;
     }
-    let handled = false;
-    if (event.key === 'Enter' && (!alt_required || event.altKey)) {
+    if (event.key === key && (!alt || event.altKey)) {
       func(this);
-      handled = true;
-    }
-    if (handled) {
       event.preventDefault();
-    };
+    }
   }
 }
 
-// bootstrap media query size name
-function media_size() {
-  if (window.matchMedia('(min-width: 992px)').matches) {
-    return "lg";
-  }
-  else if (window.matchMedia('(min-width: 768px)').matches) {
-    return "md";
-  }
-  else if (window.matchMedia('(min-width: 576px)').matches) {
-    return "sm";
-  }
-  else {
-    return "xs";
-  }
+function resize_textarea(event=null, textarea=null) {
+  textarea = textarea ?? $(this);
+  textarea.css("height", "auto");  // shrink
+  textarea.css("height", (textarea.get(0).scrollHeight + 1) + "px");
 }
 
 // window resize col
-function resize_col(evt, cur_col=0) { // col-lg-3 col-md-4 col-sm-6 col-12
-  const max_col = { // col-lg-3 col-md-4 col-sm-6 col-12
-    lg: 4,
-    md: 3,
-    sm: 2,
-    xs: 1
-  };
+function resize_col(evt, cur_col=0) {
+  // original: col-lg-3 col-md-4 col-sm-6 col-12
+  // now: 275px per column
   for (let i=1; i<=4; i++) {
     $(".memo").removeClass("col-"+(12/i));
   }
-  if (cur_col === 0) {
-    cur_col = max_col[media_size()];
+  if (cur_col === 0) {  // max column
+    if (window.matchMedia('(min-width: 1100px)').matches) {
+      cur_col = 4;
+    }
+    else if (window.matchMedia('(min-width: 825px)').matches) {
+      cur_col = 3;
+    }
+    else if (window.matchMedia('(min-width: 550px)').matches) {
+      cur_col = 2;
+    }
+    else {
+      cur_col = 1;
+    }
   }
-  else if (cur_col === -1) {
+  else if (cur_col === -1) {  // current column
     cur_col = parseInt($("#col-btn-text").text());
   }
   $(".memo").addClass("col-"+(12/cur_col));
@@ -437,7 +446,7 @@ function folder_btn() {
     $("#folder-modal-div").append(folder_row);
   }
   $("#folder-modal-div > div > p").on("click", open_folder_btn);
-  $("#folder-modal-div input").on("keydown", alt_enter_listener(rename_folder_keydown, false));
+  $("#folder-modal-div input").on("keydown", key_listener(rename_folder_keydown));
   $("#folder-modal-div button").on("click", delete_folder_btn);
   $("#folder-modal").modal("show");
 }
@@ -446,11 +455,11 @@ function add_folder_btn() {
   const new_folder_name = $("#add-folder-input").val();
   console.log("add folder btn:", new_folder_name);
   if (new_folder_name in current_folder_data) {
-    popcorn($("#add-folder-input"), "top", 2000, "Folder name exists!");
+    popcorn($("#add-folder-input"), "top", "Folder name exists!");
     return;
   }
   if (new_folder_name.length === 0) {
-    popcorn($("#add-folder-input"), "top", 2000, "Please type folder name!");
+    popcorn($("#add-folder-input"), "top", "Please type folder name!");
     return;
   }
   current_folder_data[new_folder_name] = {time: pretty_time(), data: []};
@@ -472,11 +481,11 @@ function open_folder_btn() {
 function rename_folder_keydown(self) {
   const new_folder_name = $(self).val();
   if (new_folder_name in current_folder_data) {
-    popcorn($(self), "top", 2000, "Folder name exists!");
+    popcorn($(self), "top", "Folder name exists!");
     return;
   }
   if (new_folder_name.length === 0) {
-    popcorn($(self), "top", 2000, "Please type folder name!");
+    popcorn($(self), "top", "Please type folder name!");
     return;
   }
   const original_folder_name = $(self).parent().siblings("p").eq(0).text();
@@ -496,7 +505,7 @@ function rename_folder_keydown(self) {
 
 function delete_folder_btn() {
   if (Object.keys(current_folder_data).length === 1) {
-    popcorn($(this), "right", 2000, "Can't delete only folder!");
+    popcorn($(this), "right", "Can't delete only folder!");
     return;
   }
   const folder_name = $(this).siblings("p").eq(0).text();
@@ -526,8 +535,29 @@ function clear_memo_btn() {
 }
 
 function close_memo() {
+  if (!confirm("Sure to delete?")) {
+    return;
+  }
   console.log(".close-memo clicked");
   $(this).parentsUntil("#memos").remove();
+  save_current_folder();
+}
+
+function up_memo() {
+  const memo_div = $(this).parentsUntil("#memos").last();
+  if (memo_div.prev().attr("id") === "add-memo-div") {
+    return;
+  }
+  memo_div.prev().insertAfter(memo_div);
+  save_current_folder();
+}
+
+function down_memo() {
+  const memo_div = $(this).parentsUntil("#memos").last();
+  if (memo_div.next().length === 0) {
+    return;
+  }
+  memo_div.next().insertBefore(memo_div);
   save_current_folder();
 }
 
@@ -535,7 +565,7 @@ function copy_memo() {
   console.log(".copy-memo clicked");
   const txt = $(this).parent().find("p").text();
   set_clip(txt);
-  popcorn($(this), "top", 2000, "Copied!");
+  popcorn($(this), "top", "Copied!");
 }
 
 function edit_memo() {
@@ -544,6 +574,7 @@ function edit_memo() {
   parent.find(".cancel-edit-memo").click();
   if (parent.find("p").hasClass("d-none")) {
     parent.find("textarea").val(parent.find("p").text());
+    resize_textarea(null, parent.find("textarea"));
     parent.find("textarea").focus();
   }
   else {
@@ -585,7 +616,6 @@ function import_file_selected() {
   const file = $("#import-file-selector")[0].files[0];
   const file_reader = new FileReader();
   file_reader.onload = function(evt) {
-    //console.log(evt.target.result);
     const data = JSON.parse(evt.target.result);
     data_to_ui(data);
     save_current_folder();
@@ -595,7 +625,7 @@ function import_file_selected() {
 
 function export_copy_memo_btn() {
   set_clip(data_to_json());
-  popcorn($("#export-copy-memo-btn"), "bottom", 2000, "Copied!");
+  popcorn($("#export-copy-memo-btn"), "bottom", "Copied!");
 }
 
 function import_paste_memo_btn() {
@@ -614,10 +644,9 @@ function import_pasted(evt) {
   try {
     data = JSON.parse(evt.originalEvent.clipboardData.getData('text'));
   } catch(err) {
-    //console.log(err);
     $("#import-paste-input").blur();
     // ^ don't call done_import_paste() directly! that'll cause a focus problem, not knowing why.
-    popcorn($("#import-paste-memo-btn"), "bottom", 2000, "Import failed!");
+    popcorn($("#import-paste-memo-btn"), "bottom", "Import failed!");
     return;
   }
   const success = data_to_ui(data);
@@ -626,14 +655,17 @@ function import_pasted(evt) {
     save_current_folder();
   }
   else { // Failed? Don't worry, just have some popcorn!
-    popcorn($("#import-paste-memo-btn"), "bottom", 2000, "Import failed!");
+    popcorn($("#import-paste-memo-btn"), "bottom", "Import failed!");
   }
 }
 
 // popover
-function popcorn(jq, placement, ms, content) {
+function popcorn(jq, placement, content, ms=2000, fadeMs=150) {
   jq.popover({content: content, placement: placement}).popover("show");
-  setTimeout(function(){ jq.popover("hide"); }, ms); // fade .15s
+  const tip = $("#" + jq.attr("aria-describedby"));
+  setTimeout(function(){ tip.fadeOut(fadeMs); }, ms);
+  // below is the old way to fade out popover, would fail when jq is removed
+  // setTimeout(function(){ jq.popover("hide"); }, ms); // fade .15s
   setTimeout(function(){ jq.popover("dispose"); }, ms+150);
 }
 
@@ -660,7 +692,7 @@ function pretty_time() {
 function set_clip(txt) {
   const tmp = $('<textarea>');
   $("body").append(tmp);
-  tmp.val(txt).select();//.selectRange(0, txt.length);
+  tmp.val(txt).select();
   document.execCommand("copy");
   tmp.remove();
 }
