--- a/share/2048.html
+++ b/share/2048.html
@@ -12,10 +12,12 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="kirksud.github.io">
 
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
+    <link rel="icon" href="icon/icon.svg" sizes="any" type="image/svg+xml">
+    <link rel="icon" href="icon/icon_512.png" sizes="512x512" type="image/png">
+    <link rel="icon" href="icon/icon_192.png" sizes="192x192" type="image/png">
+
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
     <style>
         body {
             margin: 0;
