--- a/share/knapsack.html
+++ b/share/knapsack.html
@@ -12,6 +12,10 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta property="og:site_name" content="kirksud.github.io">
 
+        <link rel="icon" href="icon/icon.svg" sizes="any" type="image/svg+xml">
+        <link rel="icon" href="icon/icon_512.png" sizes="512x512" type="image/png">
+        <link rel="icon" href="icon/icon_192.png" sizes="192x192" type="image/png">
+
         <style>
             main {
                 margin: 3% 3%;
