--- a/share/memo.html
+++ b/share/memo.html
@@ -11,7 +11,10 @@
   <meta property="og:url" content="https://kirksud.github.io/share/memo.html">
   <meta name="twitter:card" content="summary_large_image">
 
-  <!-- RWD & bootstrap: https://getbootstrap.com/docs/4.4/getting-started/introduction/ -->
+  <link rel="icon" href="icon/icon.svg" sizes="any" type="image/svg+xml">
+  <link rel="icon" href="icon/icon_512.png" sizes="512x512" type="image/png">
+  <link rel="icon" href="icon/icon_192.png" sizes="192x192" type="image/png">
+
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
