--- a/share/dtts.html
+++ b/share/dtts.html
@@ -17,6 +17,8 @@
 
     <link rel="icon" href="dtts_static/squirrel.png">
 
+    <link rel="manifest" href="manifest/dtts.json">
+
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
