--- a/share/boid.html
+++ b/share/boid.html
@@ -17,6 +17,8 @@
     <link rel="icon" href="icon/icon_512.png" sizes="512x512" type="image/png">
     <link rel="icon" href="icon/icon_192.png" sizes="192x192" type="image/png">
 
+    <link rel="manifest" href="manifest/boid.json">
+
     <style>
 
 body {
