--- a/share/memo.html
+++ b/share/memo.html
@@ -15,6 +15,8 @@
   <link rel="icon" href="icon/icon_512.png" sizes="512x512" type="image/png">
   <link rel="icon" href="icon/icon_192.png" sizes="192x192" type="image/png">
 
+  <link rel="manifest" href="manifest/memo.json">
+
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
