--- a/share/ppg.html
+++ b/share/ppg.html
@@ -16,7 +16,9 @@
     <link rel="icon" href="icon/icon.svg" sizes="any" type="image/svg+xml">
     <link rel="icon" href="icon/icon_512.png" sizes="512x512" type="image/png">
     <link rel="icon" href="icon/icon_192.png" sizes="192x192" type="image/png">
-  
+
+    <link rel="manifest" href="manifest/ppg.json">
+
     <style>
 
 #input, #button {
