--- a/share/2048.html
+++ b/share/2048.html
@@ -12,9 +12,9 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="kirksud.github.io">
 
-    <link rel="icon" href="icon/icon.svg" sizes="any" type="image/svg+xml">
-    <link rel="icon" href="icon/icon_512.png" sizes="512x512" type="image/png">
-    <link rel="icon" href="icon/icon_192.png" sizes="192x192" type="image/png">
+    <link rel="icon" href="icon/2048_892.png" sizes="892x892" type="image/png">
+    <link rel="icon" href="icon/2048_512.png" sizes="512x512" type="image/png">
+    <link rel="icon" href="icon/2048_192.png" sizes="192x192" type="image/png">
 
     <link rel="manifest" href="manifest/2048.json">
 
