--- a/share/dtts.html
+++ b/share/dtts.html
@@ -15,7 +15,9 @@
     <meta property="og:site_name" content="kirksud.github.io">
     <meta name="twitter:image:alt" content="Cute squirrel">
 
-    <link rel="icon" href="dtts_static/squirrel.png">
+    <link rel="icon" href="icon/squirrel_400.png" sizes="400x400" type="image/png">
+    <link rel="icon" href="icon/squirrel_512.png" sizes="512x512" type="image/png">
+    <link rel="icon" href="icon/squirrel_192.png" sizes="192x192" type="image/png">
 
     <link rel="manifest" href="manifest/dtts.json">
 
