--- a/share/day_timer.html
+++ b/share/day_timer.html
@@ -13,9 +13,9 @@
     <meta name="twitter:card" content="summary">
     <meta property="og:site_name" content="kirksud.github.io">
 
-    <link rel="icon" href="icon/icon.svg" sizes="any" type="image/svg+xml">
-    <link rel="icon" href="icon/icon_512.png" sizes="512x512" type="image/png">
-    <link rel="icon" href="icon/icon_192.png" sizes="192x192" type="image/png">
+    <link rel="icon" href="icon/time_350.png" sizes="350x350" type="image/png">
+    <link rel="icon" href="icon/time_512.png" sizes="512x512" type="image/png">
+    <link rel="icon" href="icon/time_192.png" sizes="192x192" type="image/png">
 
     <link rel="manifest" href="manifest/day_timer.json">
 
