--- a/share/memo.html
+++ b/share/memo.html
@@ -11,9 +11,9 @@
   <meta property="og:url" content="https://kirksud.github.io/share/memo.html">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="icon" href="icon/icon.svg" sizes="any" type="image/svg+xml">
-  <link rel="icon" href="icon/icon_512.png" sizes="512x512" type="image/png">
-  <link rel="icon" href="icon/icon_192.png" sizes="192x192" type="image/png">
+  <link rel="icon" href="icon/edit_350.png" sizes="350x350" type="image/png">
+  <link rel="icon" href="icon/edit_512.png" sizes="512x512" type="image/png">
+  <link rel="icon" href="icon/edit_192.png" sizes="192x192" type="image/png">
 
   <link rel="manifest" href="manifest/memo.json">
 
