+PWA service worker fetch cache

--- a/share/boid.html
+++ b/share/boid.html
@@ -136,6 +136,8 @@ https://github.com/lufemas/boid-ai-implementation
 
 */
 
+navigator.serviceWorker.register("service_worker.js")
+
 function distance(a, b) {
     return Math.hypot(a[0] - b[0], a[1] - b[1])
 }
