--- a/share/2048.html
+++ b/share/2048.html
@@ -434,6 +434,9 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script>
+
+        navigator.serviceWorker.register("service_worker.js")
+
         let autoPlay2048, autoPlay2048_2dir;
         let autoPlayRunning=false;
         function stopAutoPlay2048() {
