--- a/share/dtts.html
+++ b/share/dtts.html
@@ -328,6 +328,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.2.0/dist/tf.min.js" integrity="sha256-J9iK/e7dz7abCBHQvsXk9N47NKMDpSb+d/pnOpF3DsA=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script>
+
+        navigator.serviceWorker.register("service_worker.js")
+
         let autoPlay, autoPlayN;
         $(function(){
             for (let i=0; i<8; ++i) {
