--- a/share/ppg.html
+++ b/share/ppg.html
@@ -46,6 +46,8 @@
 
 (function() {
 
+navigator.serviceWorker.register("service_worker.js")
+
 const fps = 60
 const width = 320
 const waitSec = 2.5
